@@ -1,24 +1,22 @@
 $Id$
-Announcing guile-pg-0.16
+Announcing guile-pg-0.06
 ========================
 
 Guile-pg is a Guile module giving access to PostgreSQL databases via the
 libpq frontend to PostgreSQL.
 
-This version of guile-pg has been tested against Guile version 1.3.4 and
-Guile version 1.4 with PostgreSQL Version 7.0 on Intel Linux and Sparc
+This version of guile-pg has been tested against Guile version 1.3.4 and Guile
+version 1.4 (pre-release) with PostgreSQL Version 7.0 on Intel Linux and SPARC
 Solaris 7 (SunOS 5.7) machines.
 
-This is still alpha quality code.  It has undergone only minimal testing and
-the interfaces may change from release to release.
+This is still alpha quality code.  It has undergone only minimal testing (see
+the test subdirectory) and the interfaces may change from release to release.
 
 Features:
 
  * Connect to multiple databases simultaneously
  * Query and Update databases
- * Access SELECT results using SQL cursors
  * Create/Update/Read Large Objects using Guile ports
- * Automatic connection and result management
  * Comprehensive reference manual with example code
  * Published under the GPL
 
@@ -35,6 +33,10 @@ and via FTP from
 
 Documentation:
 -------------
+Please read the README file
+
+        http://guile-pg.sourceforge.net/README
+
 The reference manual is available online from
 
         http://guile-pg.sourceforge.net/guile-pg_toc.html
@@ -53,3 +55,4 @@ which you can subscribe to by filling in the form at
 Send bug reports and requests for help to this list.
 
 Ian Grant <iang@pobox.com>
+Fri Jun  2 15:02:07 BST 2000
